styles.css
/* Lavender color #c6abdf */
/* Magenta color #cf3482 */
/* Navy color #081e36 */

* {
  font-family: Open Sans, sans-serif;
  margin: 0px;
  padding: 0px;
}


/* login page */
.main-page {
  display: flex;
  flex-direction: column;
  align-items: center;
}

.login-page {
  background-color: #fff;
  display: flex;
  flex-direction: column;
  align-items: center;
  margin: 200px 0px;
}

.main-logo {
  height: 300px;
  width: 550px;
}

.player-form {
  display: flex;
  justify-content: center;
}

.p1-name-input,
.p2-name-input,
.p3-name-input {
  margin: 10px;
  padding: 8px 10px;
  font-size: 15px;
  border-radius: 15px;
}

.start-button {
  margin: 10px;
  padding: 8px 10px;
  font-size: 15px;
  border-radius: 15px; 
  background-image: linear-gradient(#c6abdf, #cf3482);
  width: 120px;
  font-weight: 600;
}

/* game board */
.gameboard-logo {
  width: 600px;
}

.round {
  font-weight: 800;
  font-size: 24px;
  color: #081e36;
  letter-spacing: 2px;
}

.game-board {
  display: flex;
  padding: 10px 25px;
  }

.category {
  list-style-type: none;
  margin: auto;
  width: 25%;
}

.category-1,
.category-2,
.category-3,
.category-4 {
  font-size: 1.25rem;
  font-weight: 500;
  letter-spacing: 1px;
}

.category-1 {
  border-radius: 5px 0px 0px 0px;
}

.category-4 {
  border-radius: 0px 5px 0px 0px;
}

.li-4 {
  border-radius: 0px 0px 0px 5px;
}

.li-16 {
  border-radius: 0px 0px 5px 0px;
}

li {
  border: 3px solid #4a355e;
  height: 100px;
  line-height: 85px;
  text-align: center;
  font-size: 1.6rem;
  width: 235px;
  border-style: outset;
  background-color: #081e36;    
  color: #c6abdf;
}

.scores {
  background-color: #0c2743;
  font-weight: 600;
  letter-spacing: 6px;
}

.scores:hover {
  color: #cf3482;
  font-weight: 800;
  cursor: pointer;
}

/* player podiums */

h3 {
  font-family: 'Caveat', cursive;
  color: #081e36;
  font-size: 32px;
  text-align: center;
}

h4 {
  font-weight: 700;
  font-size: 18px;
  color: #081e36;
  text-align: center;
  letter-spacing: 1.5px;
}

.player-podiums {
  display: flex;
}

.podium {
  padding: 15px;
  height: 131px;
  width: 172px;
  background-repeat: no-repeat;
  background-size: contain;
  background-position: center;
}

.podium-background {
  border: 8px #c6abdf solid;
  background-color: #c6abdf;
  margin-top: 85px;
  padding: 10px;
  border-radius: 25px 25px 4px 4px;
  background-image: linear-gradient(#c6abdf, #614976);
  border-bottom: none;
}

.player-one-podium {
  background-image: url(assets/lollipop1.jpg);
 
}

.player-two-podium {
  background-image: url(assets/lollipop2.jpg);
}

.player-three-podium {
  background-image: url(assets/lollipop3.jpg);
}

/* daily double card */

.js-daily-double-popup {
  background-color: #c6abdf;
  padding: 50px;
  border-radius: 10px;
  position: absolute;
  width: 500px;
  top: 30%;
  left: 34%;
  z-index: -1;
}


/* clue card */

.card-popup {
  background-color: #fff;
  padding: 50px;
  border-radius: 10px;
  position: absolute;
  width: 500px;
  top: 30%;
  left: 34%;
  z-index: -1;
}

.podium-border {
  border: 8px yellow solid;
  border-bottom: 0px; 
}

